--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@handlebars/allow-prototype-access": "^1.0.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mosca": "^2.8.3",
     "@types/nodemailer": "^6.4.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
+    "mosca": "^2.8.3",
     "mqtt": "^4.1.0",
     "ngx-bootstrap": "^5.6.1",
     "nodemailer": "^6.4.6",
