--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express-handlebars": "^3.1.0",
     "@types/mongoose": "^5.7.14",
     "@types/morgan": "^1.9.0",
+    "@types/multer": "^1.4.5",
     "handlebars": "^4.7.6",
     "nodemon": "^2.0.3",
     "ts-node": "^8.9.1",
@@ -39,6 +40,7 @@
     "morgan": "^1.10.0",
     "mosca": "^2.8.3",
     "mqtt": "^4.1.0",
+    "multer": "^1.4.2",
     "ngx-bootstrap": "^5.6.1",
     "nodemailer": "^6.4.6",
     "nodemailer-express-handlebars": "^4.0.0",
